fixed anchoring on mobile and desktop

--- a/app/assets/stylesheets/breakpoints.css.scss
+++ b/app/assets/stylesheets/breakpoints.css.scss
@@ -245,6 +245,13 @@
     a{
       width:100%;
       box-sizing: border-box;
+      display:none;
+      &.mobile{
+        display:inline-block;
+      }
+      &.anchor{
+        display:inline;
+      }
     }
   }
   section.question div.progress{
